--- a/Lection practice 2/manifest.json
+++ b/Lection practice 2/manifest.json
@@ -1,7 +1,7 @@
 {
 	"_version": "1.12.0",
 	"sap.app": {
-		"id": "sap.ui.demo.db",
+		"id": "sap.ui.demo.walkthrough",
 		"type": "application",
 		"i18n": "i18n/i18n.properties",
 		"title": "{{appTitle}}",
@@ -20,7 +20,7 @@
   	},
 	"sap.ui5": {
 		"rootView": {
-			"viewName": "sap.ui.demo.db.view.App",
+			"viewName": "sap.ui.demo.walkthrough.view.App",
 			"type": "XML",
 			"async": true,
 			"id": "app"
@@ -36,7 +36,7 @@
 			"i18n": {
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
-					"bundleName": "sap.ui.demo.db.i18n.i18n"
+					"bundleName": "sap.ui.demo.walkthrough.i18n.i18n"
 				}
 			},
 			"people": {
@@ -48,7 +48,7 @@
                "config": {
                   "routerClass": "sap.m.routing.Router",
                   "viewType": "XML",
-                  "viewPath": "sap.ui.demo.db.view",
+                  "viewPath": "sap.ui.demo.walkthrough.view",
                   "controlId": "app",
                   "controlAggregation": "pages",
                   "transition": "slide",
@@ -79,7 +79,7 @@
 						"detail": {
 						"viewId": "detail",
 						"viewName": "Detail",
-						"viewPath": "sap.ui.demo.db.view",
+						"viewPath": "sap.ui.demo.walkthrough.view",
 						"transition": "show",
 						"viewLevel" : 2
 					}
